--- a/django_htmx/django_htmx/templates/base.html
+++ b/django_htmx/django_htmx/templates/base.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
     <meta name="author" content="Oak McIlwain" />
-    <title>Django Components (using htmx)</title>
+    <title>{% block title %}Django Components (using htmx){% endblock %}</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    {% component_css_dependencies %}
     <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -26,8 +27,6 @@
       }
     </style>
 
-    <!-- Custom styles for this template -->
-    <link href="sticky-footer-navbar.css" rel="stylesheet" />
   </head>
   <body class="d-flex flex-column h-100">
     <header class="mb-4">
@@ -39,23 +38,19 @@
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/tasks">Tasks</a>
+              </li>              
             </ul>
           </div>
         </div>
       </nav>
     </header>
 
-    <!-- Begin page content -->
-    <main class="flex-shrink-0">
-      <div class="container">
-        <h1 class="mt-5">Django Components (using htmx)</h1>
-        <p class="lead">
-            Demonstrating the use of Django components with htmx.
-        </p>
-      </div>
-    </main>
+    {% block content %}
+    {% endblock %}
 
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
@@ -64,5 +59,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.11"></script>
+    {% component_js_dependencies %}
   </body>
 </html>
